deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: django-app-deployment
  labels:
    app: django-app
  namespace: django-todo-app

spec:
  replicas: 3
  selector:
    matchLabels:
      app: django-app
  template:
    metadata: 
      labels:
        app: django-app

    spec:
      containers:
      - name: django-todo-ctr
        image: himanshu31bisht/react_django_demo_app_web:latest
        ports:
        - containerPort: 8001
