pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: django-todo-pod
  namespace: django-todo-app
spec: 
  containers:
   - name: django-todo-ctr
     image: himanshu31bisht/react_django_demo_app_web:latest
     ports:
       - containerPort: 8001
