ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata: 
  name: ingress-host-himanshu
  namespace: django-todo-app
spec:
  rules:
  - host: "django-todo-example.info"
    http:
      paths:
        - pathType: Prefix
          path: "/"
          backend:
            service:
              name: django-todo-service
              port:
                number: 80
